# Shepherd-Gym

./: .gitignore  README.md  index.html  pyproject.toml
.github/workflows/: score.yml
course/: README.md  SPEC.md
course/assets/: l1_annotated_frame.py  l2_value_iteration.py  l3_explore_vs_exploit.py
course/lessons/: L1_the_farm_as_an_mdp.md  L2_value_functions_and_bellman.md  L3_model_free_and_exploration.md
docs/: data-roadmap.md  design-brief.md  design-system.md  herd-dynamics-bridge.md  tutorial.md  welfare-model.md
leaderboard/: README.md  t0_pasture.json  t1_paddock.json  t2_range.json  t3_skittish.json  t4_big_muster.json
results/: RESULTS.md
scripts/: bc.py  calibrate.py  ci_score.py  compete.py  demo.py  ghost.py  pareto.py  seed_leaderboard.py  showcase.py  train.py
shepherd_gym/: __init__.py  adapter.py  baselines.py  benchmark.py  env.py  leaderboard.py  render.py  scoring.py  tiers.py  vec_env.py
starter_kit/: my_sheepdog.py
submissions/: README.md  example_flank.json
tests/: test_adapter.py  test_scoring.py  test_tiers.py
